--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <i class="fa-brands fa-github"></i>
                         <span>GitHub</span>
                     </a>
-                    <a href="https://linkedin.com/in/#" target="_blank" class="contact-item linkedin-hover">
+                    <a href="https://www.linkedin.com/in/aef-syaefullah-19aa78235" target="_blank" class="contact-item linkedin-hover">
                         <i class="fa-brands fa-linkedin"></i>
                         <span>LinkedIn</span>
                     </a>
