--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <a href="#about" class="btn">
                         <i class="fa-solid fa-arrow-down"></i> Explore
                     </a>
-                    <a href="aef/aefcv.pdf" download="" class="btn">
+                    <a href="AEF_SYAEFULLAH_2505010_CV.pdf" download="" class="btn">
                         <i class="fa-solid fa-download"></i> Download CV
                     </a>
                 </div>
